--- a/client/src/styles/MovingRectangles.css
+++ b/client/src/styles/MovingRectangles.css
@@ -1,27 +1,39 @@
 .moving-rectangles-container {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  transform: rotate(45deg);
+}
+
+.rectangle {
+  width: 300px;
+  height: 5px;
+  margin: 10px 0;
+  background-color: #1ed760;
+  border-radius: 5px;
+  animation: moveRectangles 3s linear infinite;
+}
+
+.rectangle:nth-child(1){
+  animation-delay: 0s;
+}
+
+.rectangle:nth-child(2){
+  animation-delay: 2s;
+}
+
+.rectangle:nth-child(3){
+  animation-delay: 4s;
+}
+
+@keyframes moveRectangles {
+  0% {
+    transform: translate(-100%, 100%);
   }
-  
-  .rectangle {
-    width: 80px;
-    height: 60px;
-    background-color: #1ed760;
-    border-radius: 5px;
-    animation: moveRectangles 3s linear infinite;
+  100% {
+    transform: translate(100%, -100%);
   }
-  
-  @keyframes moveRectangles {
-    0% {
-      transform: translateX(-100%);
-    }
-    100% {
-      transform: translateX(100%);
-    }
-  }
+}
