--- a/client/src/styles/SearchButton.css
+++ b/client/src/styles/SearchButton.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #111;
+    background-image: url('../images/homepage-background.jpg');
 }
 
 #login-link {
