--- a/client/src/styles/SearchButton.css
+++ b/client/src/styles/SearchButton.css
@@ -1,10 +1,18 @@
-.search-container{
+.search-container {
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: center; /* Place the content in the vertical center of the container */
     align-items: center;
     background-image: url('../images/homepage-background.jpg');
+}
+
+#link-header {
+    font-size: 80px;
+    font-weight: 700;
+    color: #fff;
+    margin-top: -50px; /* Adjust the negative margin to vertically center the text */
 }
 
 #login-link {
