--- a/client/src/styles/UserDisplay.css
+++ b/client/src/styles/UserDisplay.css
@@ -1,51 +1,178 @@
 body {
-    background-color: #191919;
+    background-image: url('../images/background-image2.png');
+    background-size: cover; /* Adjust background size as needed */
+    background-repeat: no-repeat; /* Ensure the image doesn't repeat */
+    background-position: center center; /* Center the background image */
+    background-attachment: fixed; /* Make the background image fixed */
+}
+
+h1 {
+    margin: 0px;
+    padding: 0px;
+    font-size: 40px;
+    color: #ffffff;
+}
+
+h3 {
+    margin: 0px;
+    padding: 0px;
+    font-size: 32px;
+    color: #ffffff;
+}
+
+p {
+    margin: 0px;
+    padding: 0px;
+    color: #fff;
 }
 
 /* --------------- */
 /* 1. USER SECTION */
 /* --------------- */
 
-.userDisplay-container h1 {
-    margin: 0px;
-    padding: 0px;
-    color: #1ed760;
-}
-
-.userDisplay-container p {
-    margin: 0px;
-    padding: 0px;
-    color: #fff;
-}
-
 .userDisplay-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .userDisplay {
     margin-top: 20vh;
-    width: 50%;
+    padding: 20px;
+    width: 75%;
+    display: flex;
+    background-color: #242424;
+    border-radius: 15px;
+}
+
+.userImage{
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+
 }
 
 .usernameDisplay {
-    padding: 10px;
+    padding-left: 10px;
     display: flex;
-    justify-content: space-between;
-    border-bottom: solid 1px #4e4e4e;
+    flex-direction: column;
+}
+
+.userDisplay h1 {
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+    right: 5px;
+    font-size: 100px;
+}
+
+#profile{
+    position: relative;
+    top: 30px;
+}
+/* ---------------------- */
+/* 2. ARTIST LIST SECTION */
+/* ---------------------- */
+
+.artistDisplay-container h3,
+.artistDisplay-container h4,
+.artistDisplay-container p {
+    text-decoration: none;
+}
+
+.artistDisplay-container {
+    padding: 40px;
+    width: 75%;
+}
+
+.cardDisplay {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card {
+    margin: 20px;
+    padding: 20px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    background-color: #202020;
+    border-radius: 10px;
+    transition: box-shadow 0.3s, transform 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transform: scale(1.05);
+}
+
+.card-link {
+    text-decoration: none;
+    color: #fff;
+}
+
+.card-image {
+    height: 200px;
+    width: 200px;
+    border-radius: 5px;
+}
+
+.card-info {
+    transition: color 0.25s;
+    word-wrap: break-word;
+}
+
+.card-info h4{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+}
+
+.card:hover .card-info h4 {
+    color: #1ed760;
 }
 
 /* --------------------- */
-/* 2. TRACK LIST SECTION */
+/* 3. TRACK LIST SECTION */
 /* --------------------- */
+
+.trackDisplay-container{
+    width:75%;
+}
+
+.trackDisplay-container h3{
+    padding-left: 10px;
+}
+
+.infoDisplay{
+    padding: 0px 10px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    background-color: #191919;
+    border-bottom: solid 1px #4e4e4e;
+}
+
+.infoDisplay p{
+    color: #7e7e7e;
+}
 
 .trackList {
     padding: 0px 10px;
     height: 100px;
     display: flex;
     align-items: center;
-    border: solid 1px #fff;
+    text-decoration: none;
+    background-color: #191919;
+    border-radius: 5px;
+}
+
+.trackList:Hover{
+    background-color: #202020;
 }
 
 .trackNumber{
@@ -55,6 +182,11 @@ body {
     justify-content: center;
 }
 
+.trackInfoContainer{
+    display: flex;
+    flex: 1;
+}
+
 .trackImage {
     margin: 0px 5px;
     height: 40px;
@@ -62,7 +194,7 @@ body {
 }
 
 .trackNameContainer {
-    height: 40px;
+    margin: 0px 5px;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -70,8 +202,104 @@ body {
 
 .trackName {
     font-size: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 500px;
 }
 
 .trackArtist {
     font-size: 12px;
+    color: #7e7e7e;
+}
+
+.trackAlbumContainer{
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+}
+
+.trackAlbum {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 500px; /* Add ellipsis after 50 characters */
+}
+
+
+
+.trackList:hover .trackArtist{
+    color: #fff; /* Change to white on trackList hover */
+}
+
+.trackList:hover .trackName{
+    color: #1ed760; /* Change to white on trackList hover */
+}
+
+/* ------------------------- */
+/* 4. Currently Listening To */
+/* ------------------------- */
+
+.notPlayingDisplay-container{
+    width: 75%;
+    height: 200px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #242424;
+    border-radius: 10px;
+}
+
+.backgroundDiv{
+    width: 75%;
+    height: 300px;
+    margin-top: 40px;
+    padding: 20px 0px;
+    display: flex;
+    align-items: center;
+    background-image: var(--background-image-url);
+    /* Apply background image with blur effect */
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+}
+
+.playingDisplay-container{
+    width: 100%;
+    height: 300px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.527);
+    border-radius: 10px;
+}
+
+.listeningToImage{
+    width: 250px;
+    height: 250px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.currentlyPlaying-text{
+    padding-left: 10px;
+}
+
+.currentlyPlaying-text h1{
+    font-size: 80px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+}
+
+/* ---------------------- */
+/* 5. Recommended Display */
+/* ---------------------- */
+
+.recommended-container{
+    margin: 40px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
