--- a/client/src/styles/UserDisplay.css
+++ b/client/src/styles/UserDisplay.css
@@ -42,6 +42,7 @@ p {
     padding: 20px;
     width: 75%;
     display: flex;
+    align-items: center;
     background-color: #242424;
     border-radius: 15px;
 }
@@ -51,13 +52,13 @@ p {
     height: 200px;
     width: 200px;
     object-fit: cover;
-
 }
 
 .usernameDisplay {
     padding-left: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .userDisplay h1 {
@@ -66,12 +67,47 @@ p {
     position: relative;
     right: 5px;
     font-size: 100px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
 }
 
 #profile{
     position: relative;
-    top: 30px;
+    top: 20px;
 }
+
+@media (max-width: 1300px) {
+    .userDisplay h1{
+        font-size: 75px;
+    }
+    
+}
+
+@media (max-width: 800px) {
+    .userDisplay{
+        padding: 10px;
+        width: 85%;
+    }
+
+    .userImage{
+        height: 100px;
+        width: 100px;
+    }
+    .userDisplay h1{
+        font-size: 50px;
+    }
+
+    .userDisplay h3{
+        font-size: 20px;
+    }
+
+    #profile{
+        top: 0px;
+    }
+}
+
 /* ---------------------- */
 /* 2. ARTIST LIST SECTION */
 /* ---------------------- */
@@ -90,10 +126,11 @@ p {
 .cardDisplay {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .card {
-    margin: 20px;
+    margin: 10px;
     padding: 20px;
     width: 200px;
     display: flex;
@@ -101,6 +138,7 @@ p {
     background-color: #202020;
     border-radius: 10px;
     transition: box-shadow 0.3s, transform 0.3s;
+
 }
 
 .card:hover {
@@ -126,13 +164,23 @@ p {
 
 .card-info h4{
     display: -webkit-box;
-    -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;  
     overflow: hidden;
 }
 
 .card:hover .card-info h4 {
     color: #1ed760;
+}
+
+@media (max-width:1300px) {
+    .artistDisplay-container{
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 /* --------------------- */
@@ -141,6 +189,10 @@ p {
 
 .trackDisplay-container{
     width:75%;
+}
+
+.trackDisplay{
+    width: 100%;
 }
 
 .trackDisplay-container h3{
@@ -202,10 +254,10 @@ p {
 
 .trackName {
     font-size: 20px;
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;  
     overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 500px;
 }
 
 .trackArtist {
@@ -220,13 +272,11 @@ p {
 }
 
 .trackAlbum {
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;  
     overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 500px; /* Add ellipsis after 50 characters */
 }
-
-
 
 .trackList:hover .trackArtist{
     color: #fff; /* Change to white on trackList hover */
@@ -234,6 +284,21 @@ p {
 
 .trackList:hover .trackName{
     color: #1ed760; /* Change to white on trackList hover */
+}
+
+@media (max-width:800px) {
+    .trackDisplay-container{
+        width:85%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .trackAlbumContainer{
+        display: none;
+    }
+
+
 }
 
 /* ------------------------- */
@@ -249,6 +314,7 @@ p {
     align-items: center;
     background-color: #242424;
     border-radius: 10px;
+    text-align: center;
 }
 
 .backgroundDiv{
@@ -267,10 +333,11 @@ p {
 
 .playingDisplay-container{
     width: 100%;
-    height: 300px;
+    height: 100%;
     padding: 20px;
     display: flex;
     align-items: center;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.527);
     border-radius: 10px;
 }
@@ -288,9 +355,48 @@ p {
 .currentlyPlaying-text h1{
     font-size: 80px;
     display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
     overflow: hidden;
+}
+
+@media (max-width: 1300px) {
+    .playingDisplay-container h1{
+        font-size: 50px;
+    }
+}
+
+@media (max-width: 800px) {
+    .backgroundDiv{
+        width: 85%;
+        height: 200px;
+        padding: 10px 0px;
+    }
+
+    .playingDisplay-container{
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .listeningToImage{
+        display: none;
+    }
+
+    .currentlyPlaying-text{
+        text-align: center;
+    }
+
+    .currentlyPlaying-text h3{
+        font-size: 20px;
+    }
+
+    .currentlyPlaying-text h1{
+        font-size: 50px;
+    }
+
 }
 
 /* ---------------------- */
